# Files2Book

./: .gitignore  README.md  README_batch_create_file_cards.md  README_combine_images.md  README_create_file_cards.md  README_create_file_cards_from_json.md  README_desktop.md  README_directory_to_flipbooks.md  README_directory_to_images.md  README_docx_grid_preview.md  README_file_card_generator.md  README_order_files_by_json.md  README_parsePosts.md  README_pdf_to_images.md  README_pillow_textbox.md  README_pptx_grid_preview.md  README_preprocess_ig_posts  README_preprocess_mj_json.md  README_qr_code_generator.md  README_zod_schema_for_file_list.md  batch_create_file_cards.js  batch_directory_to_flipbooks.sh  combine_images_to_pdf.js  config.json  config_loader.py  create_file_cards.py  create_file_cards_from_json.py  demo_qr_exif.py  directory_to_flipbooks.py  directory_to_images.py  docx_grid_preview.py  file_card_generator.py  generate_flipbook_pages.py  order_files_by_json.py  package-lock.json  package.json  parsePosts.ts  pdf_to_images.py  pillow_textbox.py  postsSchema.ts  (+6 more)
.github/instructions/: instructions.md.instructions.md
desktop/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/scripts/: start-dev.js
desktop/src/: App.tsx  index.css  index.html  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs  main.rs
util/: config_loader.py
