[package]
name = "file2book_desktop"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
tauri = { version = "1.4.0", features = [ "shell-all"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }
